--- a/script/Makefile
+++ b/script/Makefile
@@ -2,12 +2,13 @@ KoboRoot.tgz : __ALWAYS__
 	( cd ../rootfs_261 && find . -type l | xargs rm -f )
 	( cd ../rootfs_261/lib && ln -s libz.so.1.2.8 libz.so && ln -s libz.so.1.2.8 libz.so.1 ) 
 	( cd ../rootfs_261/lib && ln -s libjpeg.so.62.1.0 libjpeg.so && ln -s libjpeg.so.62.1.0 libjpeg.so.62 ) 
-	( cd ../rootfs_261/lib && ln -s libpng16.so.16.9.0 libpng12.so && ln -s libpng16.so.16.9.0 libpng12.so.0 ) 
-	( cd ../rootfs_261/usr/lib && ln -s libfreetype.so.6.11.1 libfreetype.so && ln -s libfreetype.so.6.11.1 libfreetype.so.6 ) 
+	( cd ../rootfs_261/lib && ln -s libpng16.so.16.10.0 libpng12.so && ln -s libpng16.so.16.10.0 libpng12.so.0 ) 
+	( cd ../rootfs_261/usr/lib && ln -s libfreetype.so.6.11.2 libfreetype.so && ln -s libfreetype.so.6.11.2 libfreetype.so.6 ) 
 	( cd ../rootfs_261/bin && ln -s ../sbin/mkfs.fat mkdosfs ) 
 	( cd ../rootfs_261/bin && ln -s ../sbin/fsck.fat dosfsck ) 
 	( cd ../rootfs_261/lib && ln -s libexpat.so.1.6.0 libexpat.so && ln -s libexpat.so.1.6.0 libexpat.so.1 ) 
 	( cd ../rootfs_261/lib && ln -s libsqlite3.so.0.8.6 libsqlite3.so && ln -s libsqlite3.so.0.8.6 libsqlite3.so.0 ) 
+	( cd ../rootfs_261/usr/lib && ln -s libcrypto.so.1.0.0 libcrypto.so && ln -s libcrypto.so.1.0.0 libcrypto.so.1 ) 
 	( cd ../rootfs_261 && tar --exclude-from=../script/hackfiles.txt --owner=root --group=root -zcvf ../script/KoboRoot.tgz ./bin ./lib ./sbin ./usr )
 
 KoboRoot_hack.tgz : __ALWAYS__
