--- a/dosfstools/manpages/Makefile
+++ b/dosfstools/manpages/Makefile
@@ -38,7 +38,8 @@ build: po4a.cfg
 		exit 1; \
 	fi
 
-	po4a --keep 0 --no-backups --package-name dosfstools po4a.cfg
+	po4a --keep 0 --no-backups -o untranslated=MT,ME \
+		--package-name dosfstools po4a.cfg
 
 clean:
 	rm -rf $(LANGUAGES)
