--- a/libjpeg-turbo/config.h.in
+++ b/libjpeg-turbo/config.h.in
@@ -110,8 +110,8 @@
    unsigned. */
 #undef RIGHT_SHIFT_IS_UNSIGNED
 
-/* The size of a `long', as computed by sizeof. */
-#undef SIZEOF_LONG
+/* The size of a `size_t', as computed by sizeof. */
+#undef SIZEOF_SIZE_T
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
