--- a/libjpeg-turbo/java/Makefile.in
+++ b/libjpeg-turbo/java/Makefile.in
@@ -180,6 +180,7 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
+docdir = @docdir@
 exec_prefix = @exec_prefix@
 host = @host@
 host_alias = @host_alias@
